force-app/main/default/objects/UserGroupRelation__c/UserGroupRelation__c.object-meta.xml
<CustomObject>
    <label>User Group Relation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Groups Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>