force-app/main/default/objects/UserGroupRelation__c/fields/UserGroup__c.field-meta.xml
<CustomField>
    <fullName>UserGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Group</label>
    <referenceTo>UserGroup__c</referenceTo>
    <relationshipLabel>Users Groups Relations</relationshipLabel>
    <relationshipName>Users_Groups_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>